we have completed the update feature as well

--- a/react_and_supabase/react_supabase_note.ipynb
+++ b/react_and_supabase/react_supabase_note.ipynb
@@ -217,6 +217,56 @@
     "\n",
     "}"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "93816102",
+   "metadata": {},
+   "source": [
+    "Now, we need to update it too"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b491af7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "function App() {\n",
+    "    const [newDescription, setNewDescription] = useState(\"\"); \n",
+    "\n",
+    "    const updateTask = async (id) => { \n",
+    "        const { data, error } = await supabase\n",
+    "            .from(\"tasks\")\n",
+    "            .update({ description: newDescription })\n",
+    "            .eq(\"id\", id)\n",
+    "        \n",
+    "        if (error) {\n",
+    "            console.error(\"Error updating task:\", error);\n",
+    "            return;\n",
+    "        } else {\n",
+    "            console.log(\"Task updated successfully:\", data);\n",
+    "            // Refresh the task list after update\n",
+    "            fetchTasks();\n",
+    "        }\n",
+    "  };\n",
+    "\n",
+    "\n",
+    "    return(\n",
+    "        <textarea\n",
+    "            placeholder=\"Update Task Title\"\n",
+    "            onChange={(e) => {setNewDescription(e.target.value )}}/>\n",
+    "        <button \n",
+    "            style={{ padding: \"0.5rem 1rem\", marginRight: \"0.5rem\" }}\n",
+    "            onClick={() => updateTask(task.id, { task: newDescription })}\n",
+    "            >\n",
+    "            Edit\n",
+    "        </button>\n",
+    "    )\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
